# rag_architecture

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/rag_architecture/: app.py  config.py  ingestion.py  main.py  rag.py
