[project]
name = "rag-architecture"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicoleta Mocanu",email = "nicoleta.mocanu87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-mongodb (>=0.6.1,<0.7.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
]

[tool.poetry]
packages = [{include = "rag_architecture", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
pre-commit = "^3.5.0"
